# haskell-upenn-cs194

./: .gitignore  README.md
fall-2014/hw1-introduction/: HW01.hs
fall-2014/hw2/: README.md
fall-2014/hw2-lists/: HW02.hs
fall-2014/hw3/: LogAnalysis.hs  README.md
fall-2014/hw3-algebraic-data-types/: LogAnalysis.hs  Main.hs  README.md
fall-2014/hw4/: HW04.hs
fall-2014/hw4-polymorphism/: BST.hs  HW04.hs  README.md
fall-2014/hw5/: HW05.hs
fall-2014/hw5-typeclasses/: HW05.hs  README.md
fall-2014/hw6-io/: HW06.cabal  HW06.hs  Main.hs  README.md  cabal.sandbox.config
fall-2015/hw1-introduction/: HW01.hs
fall-2015/hw1-introduction/files/: invalid.txt  valid-tricky.txt  valid.txt
fall-2015/hw2/: HW02.hs  RunTests.hs
hw1/: CreditCard.hs
hw2/: HW02.hs  LogAnalysis.hs
hw3/: Golf.hs
spring-2013/: README.md
spring-2013/hw1/: CreditCard.hs
spring-2013/hw2/: LogAnalysis.hs  LogAnalysis2.hs  Main.hs  README.md
spring-2013/hw3/: Golf.cabal  Golf.hs  LICENSE  README.md
spring-2013/hw3/src/: Golf.hs  Golf2.hs
spring-2013/hw3/test/: GolfSpec.hs
spring-2013/hw4/: HW4.cabal  README.md
spring-2013/hw4/src/: HW4.hs
spring-2013/hw4/test/: HW4Spec.hs
spring-2013/hw5/hw5/: README.md  hw5.cabal
spring-2013/hw5/hw5/app/: Main.hs
spring-2013/hw5/hw5/src/: Lib.hs
spring-2013/hw5/hw5/test/: Spec.hs
